objects/Set_of_Books_Entities__c.object
<CustomObject>
    <fields>
        <fullName>Created_by_Automation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created by Automation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entity_Role__c</fullName>
        <label>Entity Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Disregarded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <referenceTo>Entities__c</referenceTo>
        <relationshipLabel>Set of Books Entities</relationshipLabel>
        <relationshipName>Set_of_Books_Entities</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Set_of_Books__c</fullName>
        <label>Set of Books</label>
        <referenceTo>Set_of_Books__c</referenceTo>
        <relationshipLabel>Set of Books Entities</relationshipLabel>
        <relationshipName>Set_of_Books_Entities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Set of Books Entity</label>
    <nameField>
        <label>Set of Books Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Set of Books Entities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>